Hopeful completion of last commit